feat(mutation): mutation inserirPessoa implementada
Bloco de Código 2.3.5 da apostila 04 encerrado.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@graphql-yoga/node": "^2.13.12",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "graphql": "^16.6.0"
+    "graphql": "^16.6.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
